--- a/openseats/templates/group.html
+++ b/openseats/templates/group.html
@@ -9,13 +9,25 @@
     <title>Group</title>
 </head>
 <body>
-    <div class="group-container container py-3">
-        <div class="top-navigator container py-1">
+    <header>{% include 'header.html' %}</header>
+    <main class="d-flex justify-content-center">
+    <div class="group-container container py-3 mt-400">
+        <!-- <div class="top-navigator container py-1">
             <h5>현재 이용가능한 곳</h4>
-            <a href="">모두보기</a>
-        </div>
-        <div class="groups mb-2 py-2">
-            <div class="card" style="width: 15rem;">
+            
+        </div> -->
+        <nav class="navbar md-1 py-3 align-items-center">
+            <div class="container-fluid">
+              <h5 class="navbar-brand py-0 my-1">현재 이용가능한 곳</h5>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-primary" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
+
+        <div class="groups d-flex justify-content-centerex-wrap">
+            <div class="card mr-10 mb-5">
                 <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title mb-3">백수 스터디카페</h5>
@@ -25,7 +37,7 @@
                     <a href="#" class="btn btn-primary">예약하기</a>
                 </div>
             </div>
-            <div class="card" style="width: 15rem;">
+            <div class="card mr-10 mb-5" style="width: 15rem;">
                 <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title mb-3">백수 스터디카페</h5>
@@ -35,7 +47,7 @@
                     <a href="#" class="btn btn-primary">예약하기</a>
                 </div>
             </div>
-            <div class="card" style="width: 15rem;">
+            <div class="card mr-10 mb-5" style="width: 15rem;">
                 <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title mb-3">백수 스터디카페</h5>
@@ -45,7 +57,7 @@
                     <a href="#" class="btn btn-primary">예약하기</a>
                 </div>
             </div>
-            <div class="card" style="width: 15rem;">
+            <div class="card mb-5 mr-10" style="width: 15rem;">
                 <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title mb-3">백수 스터디카페</h5>
@@ -55,17 +67,13 @@
                     <a href="#" class="btn btn-primary">예약하기</a>
                 </div>
             </div>
-            <div class="card" style="width: 15rem;">
-                <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title mb-3">백수 스터디카페</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary" style="font-size: 10px;">경상남도 창원시 마산회원구 양덕서로 45-1</h6>
-                    <p class="card-text mb-0" style="font-size: 13px">사용 가능한 자리: 36/50</p>
-                    <p class="card-text" style="font-size: 13px">1시간 2000원</p>
-                    <a href="#" class="btn btn-primary">예약하기</a>
-                </div>
-            </div>
+            
+           
         </div>
     </div>
+    </main>
+    <footer>{% include 'footer.html' %}</footer>
 </body>
 </html>
+
+<!-- http://blckchainetc.tistory.com/352 -->
