--- a/openseats/templates/group.html
+++ b/openseats/templates/group.html
@@ -26,47 +26,25 @@
             </div>
           </nav>
 
-        <div class="groups d-flex justify-content-centerex-wrap">
-            <div class="card mr-10 mb-5">
-                <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title mb-3">백수 스터디카페</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary" style="font-size: 10px;">경상남도 창원시 마산회원구 양덕서로 45-1</h6>
-                    <p class="card-text mb-0" style="font-size: 13px">사용 가능한 자리: 36/50</p>
-                    <p class="card-text" style="font-size: 13px">1시간 2000원</p>
-                    <a href="#" class="btn btn-primary">예약하기</a>
+        <div class="groups d-flex justify-content-center flex-wrap">
+           
+        
+            {% if group_list %}
+                {% for group in group_list %}
+                <div class="card mr-10 mb-5">
+                    <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title mb-3">{{ group.name }}</h5>
+                        <h6 class="card-subtitle mb-2 text-body-secondary" style="font-size: 10px;">{{ group.address }}</h6>
+                        <p class="card-text mb-0" style="font-size: 13px">사용 가능한 자리: 36/50</p>
+                        <p class="card-text" style="font-size: 13px">1시간 {{ group.money_per_hour }}원</p>
+                        <a href="#" class="btn btn-primary">예약하기</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card mr-10 mb-5" style="width: 15rem;">
-                <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title mb-3">백수 스터디카페</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary" style="font-size: 10px;">경상남도 창원시 마산회원구 양덕서로 45-1</h6>
-                    <p class="card-text mb-0" style="font-size: 13px">사용 가능한 자리: 36/50</p>
-                    <p class="card-text" style="font-size: 13px">1시간 2000원</p>
-                    <a href="#" class="btn btn-primary">예약하기</a>
-                </div>
-            </div>
-            <div class="card mr-10 mb-5" style="width: 15rem;">
-                <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title mb-3">백수 스터디카페</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary" style="font-size: 10px;">경상남도 창원시 마산회원구 양덕서로 45-1</h6>
-                    <p class="card-text mb-0" style="font-size: 13px">사용 가능한 자리: 36/50</p>
-                    <p class="card-text" style="font-size: 13px">1시간 2000원</p>
-                    <a href="#" class="btn btn-primary">예약하기</a>
-                </div>
-            </div>
-            <div class="card mb-5 mr-10" style="width: 15rem;">
-                <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title mb-3">백수 스터디카페</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary" style="font-size: 10px;">경상남도 창원시 마산회원구 양덕서로 45-1</h6>
-                    <p class="card-text mb-0" style="font-size: 13px">사용 가능한 자리: 36/50</p>
-                    <p class="card-text" style="font-size: 13px">1시간 2000원</p>
-                    <a href="#" class="btn btn-primary">예약하기</a>
-                </div>
-            </div>
+                {% endfor %}
+            {% else %}
+                <h1>No any result</h1>
+            {% endif %}
             
            
         </div>
