--- a/openseats/templates/header.html
+++ b/openseats/templates/header.html
@@ -14,7 +14,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/group">Group</a>
+                    <a class="nav-link active" aria-current="page" href="{{url_for('group.main_page')}}">Group</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/mypage">mypage</a>
