--- a/openseats/templates/basic/footer.html
+++ b/openseats/templates/basic/footer.html
@@ -1,7 +1,7 @@
 <footer class="container py-3">
     <div class="row">
       <div class="col-12 col-md">
-        <small class="d-block mb-3 text-muted">&copy; 2023</small>
+        <small class="d-block mb-3 text-muted">&copy; 2023 Baeksu Studio</small>
       </div>
       <div class="col-6 col-md">
         <h5>Links</h5>
