--- a/openseats/templates/group.html
+++ b/openseats/templates/group.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/group.css') }}">
-    <title>Group</title>
-</head>
-<body>
-    <header>{% include 'header.html' %}</header>
-    <main class="d-flex justify-content-center">
+{% extends 'basic/base.html' %}
+{% block title %}Openseats - Group page{% endblock %}
+
+{% block content %}
+    <!-- navigation  -->
+<main class="d-flex justify-content-center">
     <div class="group-container container py-3 mt-400">
-        <!-- <div class="top-navigator container py-1">
-            <h5>현재 이용가능한 곳</h4>
-            
-        </div> -->
         <nav class="navbar md-1 py-3 align-items-center">
             <div class="container-fluid">
               <h5 class="navbar-brand py-0 my-1">현재 이용가능한 곳</h5>
@@ -26,16 +15,15 @@
             </div>
           </nav>
 
+        <!-- group list -->
         <div class="groups d-flex justify-content-center flex-wrap">
-           
-        
             {% if group_list %}
                 {% for group in group_list %}
                 <div class="card mr-10 mb-5">
                     <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title mb-3">{{ group.name }}</h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary" style="font-size: 10px;">{{ group.address }}</h6>
+                        <h6 class="card-subtitle mb-2 text-body-secondary" style="font-size: 11px;">{{ group.address }}</h6>
                         <p class="card-text mb-0" style="font-size: 13px">사용 가능한 자리: 36/50</p>
                         <p class="card-text" style="font-size: 13px">1시간 {{ group.money_per_hour }}원</p>
                         <a href="#" class="btn btn-primary">예약하기</a>
@@ -45,13 +33,7 @@
             {% else %}
                 <h1>No any result</h1>
             {% endif %}
-            
-           
         </div>
     </div>
-    </main>
-    <footer>{% include 'footer.html' %}</footer>
-</body>
-</html>
-
-<!-- http://blckchainetc.tistory.com/352 -->
+</main>
+{% endblock %}
