--- a/openseats/templates/login.html
+++ b/openseats/templates/login.html
@@ -1,24 +1,12 @@
-<!doctype html>
-<html lang="ko">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'basic/base.html' %}
+{% block title %}Openseats - Login page{% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    
-    
-    <header>{% include 'header.html' %}</header>
-    <main>
+{% block content %}
+    <main class="d-flex justify-content-center">
         <div class="container mt-5">
-            <div class="row justify-content-center">
-              <div class="col-md-6 col-lg-4">
-                <div class="card">
+            <div>
+              <div class="d-flex justify-content-center">
+                <div class="card" style="width: 30%">
                   <div class="card-body">
                     <h3 class="text-center mb-4">로그인</h3>
                     <form>
@@ -45,23 +33,6 @@
               </div>
             </div>
           </div>
-          
-
-
     </main>
-    <footer>{% include 'footer.html' %}</footer>
-    
+{% endblock %}
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-
-  </body>
-</html>
