deleted dev, made new dev

--- a/openseats/templates/group.html
+++ b/openseats/templates/group.html
@@ -3,6 +3,14 @@
 
 {% block content %}
     <!-- navigation  -->
+<style>
+    .card {
+        margin-right: 13px; 
+        margin-bottom: 10px;
+        width: 15rem;
+    }
+</style>
+
 <main class="d-flex justify-content-center">
     <div class="group-container container py-3 mt-400">
         <nav class="navbar md-1 py-3 align-items-center">
