--- a/openseats/templates/login.html
+++ b/openseats/templates/login.html
@@ -2,11 +2,11 @@
 {% block title %}Openseats - Login page{% endblock %}
 
 {% block content %}
-    <main class="d-flex justify-content-center">
+    <main>
         <div class="container mt-5">
-            <div>
-              <div class="d-flex justify-content-center">
-                <div class="card" style="width: 30%">
+            <div class="row justify-content-center">
+              <div class="col-md-6 col-lg-4">
+                <div class="card">
                   <div class="card-body">
                     <h3 class="text-center mb-4">로그인</h3>
                     <form>
@@ -33,6 +33,6 @@
               </div>
             </div>
           </div>
-    </main>
+        </main>
 {% endblock %}
 
