--- a/openseats/templates/sign_in.html
+++ b/openseats/templates/sign_in.html
@@ -25,7 +25,7 @@
                         <a href="#">비밀번호를 잊으셨나요?</a>
                       </div>
                       <div class="text-center mt-3">
-                        <a href="#">회원가입</a>
+                        <a href="/SignUp">회원가입</a>
                       </div>
                     </form>
                   </div>
