--- a/openseats/templates/basic/header.html
+++ b/openseats/templates/basic/header.html
@@ -19,6 +19,9 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/mypage">mypage</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{url_for('group.create')}}">Create Group</a>
+                  </li>
                 </ul>
               </div>
             </div>
