--- a/openseats/templates/group/group.html
+++ b/openseats/templates/group/group.html
@@ -15,7 +15,7 @@
     <div class="group-container container py-3 mt-400">
         <nav class="navbar md-1 py-3 align-items-center">
             <div class="container-fluid">
-              <h5 class="navbar-brand py-0 my-1">현재 이용가능한 곳</h5>
+              <h5 class="navbar-brand py-0 my-1 fw-bold">현재 이용가능한 곳</h5>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
@@ -30,11 +30,11 @@
                 <div class="card mr-10 mb-5">
                     <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title mb-3">{{ group.name }}</h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary" style="font-size: 11px;">{{ group.address }}</h6>
-                        <p class="card-text mb-0" style="font-size: 13px">사용 가능한 자리: 36/50</p>
+                        <h5 class="card-title mb-2" style="font-size: 17px">{{ group.name }}</h5>
+                        <h6 class="card-subtitle mb-2 text-body-secondary" style="font-size: 14px;">{{ group.address }}</h6>
+                        <p class="card-text mb-0" style="font-size: 13px">{{ group.description }}</p>
                         <p class="card-text" style="font-size: 13px">1시간 {{ group.money_per_hour }}원</p>
-                        <a href="#" class="btn btn-primary">예약하기</a>
+                        <a href="{{ url_for('group.detail_page', group_id=group.id) }}" class="btn btn-primary">예약하기</a>
                     </div>
                 </div>
                 {% endfor %}
