--- a/openseats/templates/sign_up.html
+++ b/openseats/templates/sign_up.html
@@ -10,21 +10,23 @@
           <div class="card">
             <div class="card-body">
               <h3 class="text-center mb-4">회원가입</h3>
-              <form>
+              <form method="post">
+                {{ form.csrf_token }}
+                {% include "form_errors.html" %}
                 <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="username" placeholder="아이디">
+                  <input type="text" class="form-control" id="username" name="username" placeholder="이름" value="{{ form.username.data or '' }}">
                   <label for="username">이름</label>
                 </div>
                 <div class="form-floating mb-3">
-                  <input type="email" class="form-control" id="email" placeholder="이메일">
+                  <input type="email" class="form-control" id="email" name="email" placeholder="이메일" value="{{ form.email.data or '' }}">
                   <label for="email">이메일</label>
                 </div>
                 <div class="form-floating mb-3">
-                  <input type="password" class="form-control" id="password" placeholder="비밀번호">
+                  <input type="password" class="form-control" id="password1" name="password1" placeholder="비밀번호" value="{{ form.password2.data or '' }}">
                   <label for="password">비밀번호</label>
                 </div>
                 <div class="form-floating mb-3">
-                  <input type="password" class="form-control" id="confirmPassword" placeholder="비밀번호 확인">
+                  <input type="password" class="form-control" id="password2" name="password2"placeholder="비밀번호 확인" value="{{ form.password2.data or '' }}">
                   <label for="confirmPassword">비밀번호 확인</label>
                   <div class="invalid-feedback">
                     비밀번호가 일치하지 않습니다.
@@ -34,7 +36,7 @@
                   <button type="submit" class="btn btn-primary" id="registerBtn" disabled>가입하기</button>
                 </div>
                 <div class="text-center">
-                  이미 계정이 있으신가요? <a href="/SignIn">로그인</a>
+                  이미 계정이 있으신가요? <a href="{{ url_for('auth.SignIn_page') }}">로그인</a>
                 </div>
               </form>
             </div>
