dev login logout

--- a/openseats/templates/main.html
+++ b/openseats/templates/main.html
@@ -3,16 +3,29 @@
 
 
 {% block content %}
-
-      <div class="container my-5">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <h1 class="display-4">OpenSeats에 오신 것을 환영합니다!</h1>
-            <p class="lead">시작하기 버튼을 눌러 회원가입하고 로그인해 보세요.</p>
-            <a class="btn btn-lg btn-primary" href="{{ url_for('auth.SignUp_page') }}" role="button">시작하기</a>
-          </div>
-        </div>
+{% if g.user %}
+  <div class="container my-5">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h1 class="display-4"></h1>
+        <h1 class="display-4">{{ g.user.username }}님 환영합니다.</h1>
+        <p class="lead">그룹을 만들거나 그룹에 참여해보세요!</p>
+        <a class="btn btn-lg btn-primary" href="#" role="button">그룹 만들기</a>
+        <a class="btn btn-lg btn-primary" href="#" role="button">그룹 참여하기</a>
       </div>
+    </div>
+  </div>
+{% else %}
+  <div class="container my-5">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h1 class="display-4">OpenSeats에 오신 것을 환영합니다!</h1>
+        <p class="lead">시작하기 버튼을 눌러 회원가입하고 로그인해 보세요.</p>
+        <a class="btn btn-lg btn-primary" href="{{ url_for('auth.SignUp_page') }}" role="button">시작하기</a>
+      </div>
+    </div>
+  </div>
+{% endif %}
 
 {% endblock %}
 
