--- a/openseats/templates/basic/header.html
+++ b/openseats/templates/basic/header.html
@@ -12,14 +12,23 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{url_for('group.main_page')}}">Group</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/mypage">mypage</a>
-                  </li>
+                {% if g.user %}
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="{{url_for('group.main_page')}}">Group</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="{{url_for('auth.logout')}}">{{ g.user.username }} (LogOut)</a>
+                    </li>
+
+                  {% else %}
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="{{url_for('auth.SignIn_page')}}">Login</a>
+                    </li>
+                  </ul>
                 </ul>
+                {% endif %}
               </div>
             </div>
         </nav>
