--- a/openseats/templates/basic/header.html
+++ b/openseats/templates/basic/header.html
@@ -7,7 +7,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/">OpenSeats</a>
+              <a class="navbar-brand" href="{{ url_for('main.main_page') }}">OpenSeats</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -17,10 +17,10 @@
                     <a class="nav-link active" aria-current="page" href="{{url_for('group.main_page')}}">Group</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/mypage">mypage</a>
+                    <a class="nav-link active" aria-current="page" href="{{url_for('group.create')}}">Create Group</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{url_for('group.create')}}">Create Group</a>
+                    <a class="nav-link active" aria-current="page" href="/mypage">Mypage</a>
                   </li>
                 </ul>
               </div>
