--- a/openseats/templates/group/group.html
+++ b/openseats/templates/group/group.html
@@ -9,6 +9,13 @@
         margin-bottom: 10px;
         width: 15rem;
     }
+    .placeholder {
+        content: "";
+        display: inline-block;
+        width: 150px;
+        height: 1em;
+        background-color: #dedede;
+    }
 </style>
 
 <main class="d-flex justify-content-center">
@@ -27,17 +34,31 @@
         <div class="groups d-flex justify-content-center flex-wrap">
             {% if group_list %}
                 {% for group in group_list %}
-                <div class="card mr-10 mb-5">
-                    <img src="{{ url_for('static', filename='img/studycafe1.jpeg') }}" class="card-img-top" alt="...">
+                <div class="card mr-10 mb-3">
+                    <img src="{{ url_for('static', filename='img/1.jpeg') }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title mb-2" style="font-size: 17px">{{ group.name }}</h5>
                         <h6 class="card-subtitle mb-2 text-body-secondary" style="font-size: 14px;">{{ group.address }}</h6>
-                        <p class="card-text mb-0" style="font-size: 13px">{{ group.description }}</p>
-                        <p class="card-text" style="font-size: 13px">1시간 {{ group.money_per_hour }}원</p>
+                        <p class="card-text" style="font-size: 13px">₩{{ group.money_per_hour }} /1시간</p>
                         <a href="{{ url_for('group.detail_page', group_id=group.id) }}" class="btn btn-primary">예약하기</a>
                     </div>
                 </div>
                 {% endfor %}
+                <!-- Fill the blank box -->
+                {% if groups|length % 3 != 0 %}
+                    {% for i in range(0, 3 - groups|length % 3) %}
+                        <div class="card mr-10 mb-3">
+                            <div class="card-img-top" style="background-color: #dedede; width: 100%; height: 133px;"></div>
+                            <div class="card-body">
+                                <h5 class="card-title mb-2 placeholder" style=""></h5>
+                                <h5 class="card-title mb-2 placeholder" style=""></h5>
+                                <h5 class="card-title mb-2 placeholder" style=""></h5>
+                            </div>
+                        </div>
+                    {% endfor %}
+                {% endif %}
+                <!-- End Filling -->
+
             {% else %}
                 <h1>No any result</h1>
             {% endif %}
