--- a/openseats/templates/group/group_detail.html
+++ b/openseats/templates/group/group_detail.html
@@ -2,9 +2,10 @@
 {% block title %}Openseats - {{ group.name }}{% endblock %}
 
 {% block content %}
-<div class="container mx-5 mt-3">
+<div class="container mx-20 mt-5">
     <h1 class="fw-bold">{{ group.name }}</h1>
-    <h6 class="fw-bold">{{ group.address }}</h6>
+    <h6 class="fw-bold mt-3">{{ group.address }}</h6>
+    <img src="{{ image }}" >
     <p>{{ group.description }}</p>
 </div>
 {% endblock %}
