--- a/openseats/templates/group/group_create.html
+++ b/openseats/templates/group/group_create.html
@@ -19,7 +19,7 @@
     <!-- 오류표시 End -->
 
     <h1 class="mb-3">새로운 그룹을 생성하세요</h1>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {{ form.csrf_token }}
         <div class="row mb-3">
             <label for="name" class="col-sm-2 col-form-label">그룹 이름</label>
@@ -44,6 +44,10 @@
             <div class="col-sm-10">
             <input type="text" class="form-control" id="money_per_hour" name="money_per_hour" value="{{ form.money_per_hour.data or  ''}}">
             </div>
+        </div>
+        <div class="input-group mb-3">
+            <label for="image" class="col-sm-2 col-form-label">섬네일 이미지</label>
+            <input type="file" class="form-control" id="inputGroupFile02" name="image">
         </div>
         <button type="submit" class="btn btn-primary">생성하기</button>
     </form>
