--- a/openseats/templates/group/group_detail.html
+++ b/openseats/templates/group/group_detail.html
@@ -2,10 +2,30 @@
 {% block title %}Openseats - {{ group.name }}{% endblock %}
 
 {% block content %}
-<div class="container mx-20 mt-5">
-    <h1 class="fw-bold">{{ group.name }}</h1>
-    <h6 class="fw-bold mt-3">{{ group.address }}</h6>
-    <img src="{{ image }}" >
-    <p>{{ group.description }}</p>
+<style>
+    .banner_img {
+        width: 100%;
+        max-width: 400px;
+        height: auto;
+
+    }
+</style>
+
+<div class="container mx-30 mt-5">
+    <div class="d-flex justify-content-center">
+        <div class="mr-3">
+            <img 
+                width="600px"
+                height="400px"
+                src="{{ url_for('static', filename='/img/{}'.format(group.image_path)) }}" 
+                class="mt-2 banner_img img-fluid" 
+            >
+        </div>
+        <div class="">
+            <h2 class="fw-bold">{{ group.name }}</h2>
+            <h6 class="fw-bold mt-2" style="color: #999999">{{ group.address }}</h6>
+            <p>{{ group.description }}</p>
+        </div>
+    </div>
 </div>
 {% endblock %}
