--- a/openseats/templates/auth/sign_up.html
+++ b/openseats/templates/auth/sign_up.html
@@ -12,7 +12,7 @@
               <h3 class="text-center mb-4">회원가입</h3>
               <form method="post">
                 {{ form.csrf_token }}
-                {% include "form_errors.html" %}
+                {% include "auth/form_errors.html" %}
                 <div class="form-floating mb-3">
                   <input type="text" class="form-control" id="username" name="username" placeholder="이름" value="{{ form.username.data or '' }}">
                   <label for="username">이름</label>
