--- a/openseats/templates/basic/header.html
+++ b/openseats/templates/basic/header.html
@@ -1,43 +1,50 @@
 
-        <style>
-            .navbar-brand {
-            padding-left: 20px;
-        }
-        </style>
+<style>
+    .navbar-brand {
+    padding-left: 20px;
+}
+</style>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="{{ url_for('main.main_page') }}">OpenSeats</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                {% if g.user %}
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="{{url_for('group.main_page')}}">Group</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="{{url_for('auth.logout')}}">{{ g.user.username }} (LogOut)</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="{{url_for('group.create')}}">Create Group</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/mypage">Mypage</a>
-                    </li>
-
-                  {% else %}
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="{{url_for('auth.SignIn_page')}}">Login</a>
-                    </li>
-                  </ul>
-                </ul>
-                {% endif %}
-              </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid" style="padding-left: 50px; padding-right: 50px;">
+      <a class="navbar-brand" href="{{ url_for('main.main_page') }}">OpenSeats</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        {% if g.user %}
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{url_for('group.main_page')}}">Group</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{url_for('group.create')}}">Create Group</a>
+            </li>
+          </ul>
+        <li class="nav-item" style="list-style: none">
+            <div class="dropdown">
+              <a href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="list-style: none">
+                <img class="rounded-circle" src="{{ url_for('static', filename='/img/profile/default_profile.png') }}" alt="your-image-alt" width="40" height="40">
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="{{ url_for('main.my_page', user_page=g.user.userID) }}">내 페이지</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{{url_for('auth.logout')}}">로그아웃</a></li>
+              </ul>
             </div>
-        </nav>
+          </li>
+          
+          {% else %}
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{url_for('auth.SignIn_page')}}">Login</a>
+            </li>
+          </ul>
+        
+        {% endif %}
+      </div>
+    </div>
+</nav>
           
 
 
