multiple images uploading

--- a/openseats/templates/group/group_create.html
+++ b/openseats/templates/group/group_create.html
@@ -46,8 +46,8 @@
             </div>
         </div>
         <div class="input-group mb-3">
-            <label for="image" class="col-sm-2 col-form-label">섬네일 이미지</label>
-            <input type="file" class="form-control" id="inputGroupFile02" name="image">
+            <label for="images" class="col-sm-2 col-form-label">썸네일 이미지</label>
+            <input type="file" class="form-control" id="images" name="images" multiple>
         </div>
         <button type="submit" class="btn btn-primary">생성하기</button>
     </form>
