--- a/openseats/templates/group/group_detail.html
+++ b/openseats/templates/group/group_detail.html
@@ -4,26 +4,74 @@
 {% block content %}
 <style>
     .banner_img {
-        width: 100%;
-        max-width: 400px;
-        height: auto;
-
+        min-width: 600px;
+        height: 400px;
     }
 </style>
 
-<div class="container mx-30 mt-5">
-    <div class="d-flex justify-content-center">
-        <div class="mr-3">
-            <img 
-                width="600px"
-                height="400px"
-                src="{{ url_for('static', filename='/img/{}'.format(group.image_path)) }}" 
-                class="mt-2 banner_img img-fluid" 
-            >
-        </div>
+<div class="container mt-5" style="padding: 0 100px">
+    <div class="d-flex ">
         <div class="">
             <h2 class="fw-bold">{{ group.name }}</h2>
             <h6 class="fw-bold mt-2" style="color: #999999">{{ group.address }}</h6>
+
+                <!-- 이미지  -->
+                <!-- <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="{{ url_for('static', filename='/uploads/img/{}/{}'.format(group.id ,group.images[0].path)) }}" class="d-block w-100 banner_img" alt="...">
+                        </div>
+                        {% for i in range(group.images|length) %}
+                            {% if i != 0%}
+                                <div class="carousel-item">
+                                    <img src="{{ url_for('static', filename='/uploads/img/{}/{}'.format(group.id, group.images[i].path)) }}" class="d-block w-100 banner_img" alt="...">
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div> -->
+
+                <div id="carouselExampleIndicators" class="carousel slide"  style="max-width:600px; max-height:400px !important;">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        {% for i in range(group.images|length) %}
+                            {% if i != 0%}
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="{{i}}" aria-label="Slide {{i}}"></button>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                    <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="{{ url_for('static', filename='/uploads/img/{}/{}'.format(group.id ,group.images[0].path)) }}" class="d-block w-100 banner_img" alt="...">
+                            </div>
+                            {% for i in range(group.images|length) %}
+                                {% if i != 0%}
+                                    <div class="carousel-item">
+                                        <img src="{{ url_for('static', filename='/uploads/img/{}/{}'.format(group.id, group.images[i].path)) }}" class="d-block w-100 banner_img" alt="...">
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                    </div>
+                    {% if group.images|length > 1 %}
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    {% endif %}
+                </div>
+   
             <p>{{ group.description }}</p>
         </div>
     </div>
