유저 정보 수정 끝

--- a/openseats/templates/mypage/mypage.html
+++ b/openseats/templates/mypage/mypage.html
@@ -12,6 +12,7 @@
                 <img src="{{ url_for('static', filename='/img/profile/default_profile.png') }}" class="img-fluid rounded-circle mb-3" alt="프로필 사진">
                 <h5 class="card-title">{{ user.username }}</h5>
                 <p class="card-text">{{ user.email }}</p>
+                <p class="card-text">{{ user.userMessage }}</p>
                 </div>
                 {% if g.user.id == user.id %}
                 <a href="{{ url_for('main.my_page_edit',  user_page=g.user.userID) }}" class="btn btn-primary">프로필 수정</a>
