--- a/openseats/templates/mypage/mypage_edit.html
+++ b/openseats/templates/mypage/mypage_edit.html
@@ -54,8 +54,9 @@
       <div class="mb-5"></div> <!-- 요소들 사이의 간격을 주기 위한 빈 div -->
       <div class="border p-2 mb-1">
         <h3>프로필 사진 변경</h3>
-          <div class="mb-3">
-            <label for="photoUpload" class="form-label">변경할 프로필 사진을 선택해주세요. (JPG, JPEG, PNG 파일만 업로드 가능합니다.)</label>
+        <p>변경할 프로필 사진을 선택해주세요. (JPG, JPEG, PNG 파일만 업로드 가능합니다.)</p>
+        <div class="mb-5"></div> <!-- 요소들 사이의 간격을 주기 위한 빈 div -->
+        <div class="mb-3">
             <input class="form-control" type="file" id="photoUpload" name="photoUpload">
           </div>
       </div>
