--- a/openseats/templates/canvas/canvas.html
+++ b/openseats/templates/canvas/canvas.html
@@ -6,10 +6,12 @@
 
 
 <style>
-    canvas {
-      border: 1px solid #999;
-      margin-top: 10px;
-    }
+  body {
+    font-family: sans-serif;
+  }
+  canvas {
+    border: 1px solid #999;
+  }
   </style>
 <div>
     <script src="https://unpkg.com/fabric@5.3.0/dist/fabric.min.js"></script>
