--- a/openseats/templates/basic/header.html
+++ b/openseats/templates/basic/header.html
@@ -23,7 +23,7 @@
           <li class="nav-item" style="list-style: none">
             <div class="dropdown">
               <a id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="list-style: none">
-                <img class="rounded-circle" src="{{ g.user_profile_path }}" alt="your-image-alt" width="40" height="40">
+                <img class="rounded-circle" src="{{ url_for('feature.get_profile_image', user_id=g.user.id) }}" alt="your-image-alt" width="40" height="40">
               </a>
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="{{ url_for('main.my_page', username=g.user.userID) }}">내 페이지</a></li>
