--- a/openseats/templates/group/group.html
+++ b/openseats/templates/group/group.html
@@ -23,6 +23,7 @@ endblock %} {% block content %}
 
 <main class="d-flex justify-content-center">
   <div class="group-container container py-3 mt-400">
+    {% include 'basic/flash.html' %}
     <nav class="navbar md-1 py-3 align-items-center">
       <div class="container-fluid">
         <h5 class="navbar-brand py-0 my-1 fw-bold">현재 이용가능한 곳</h5>
